--- a/dashboard.html
+++ b/dashboard.html
@@ -60,14 +60,14 @@
                 <img src="icons/search.svg" alt="search-icon">
                 <input type="text" name="search">
                 <img src="icons/bell.svg" alt="bell" class="bell">
-                <img src="icons/cat-user.png" alt="user-photo" class="small-user-photo">
+                <img src="icons/panda-user.png" alt="user-photo" class="small-user-photo">
                 <div class="small-username">Morgan Oakley</div>
               </div>
               <div class="user-info">
-                  <img src="icons/cat-user.png" alt="user-photo" class="big-user-photo">
+                  <img src="icons/panda-user.png" alt="user-photo" class="big-user-photo">
                   <div class="greeting">
-                      <div>Hi there,</div>
-                      <div class="big-user-name">Morgan Oakley(@morgan)</div>
+                      <div class="hello">Hi there,</div>
+                      <div class="big-username">Morgan Oakley(@morgan)</div>
                   </div>
                   <div class="buttons">
                       <button>New</button>
@@ -152,14 +152,14 @@
                               </div>
                           </li>
                           <li class="trending">
-                            <img src="icons/cat-user.png" alt="cat-user" class="small-user-photo">
+                            <img src="icons/panda-user.png" alt="cat-user" class="small-user-photo">
                             <div class="info">
                                 <div class="username">@morgan</div>
                                 <div class="user-project">Super Cool Project</div>
                             </div>
                         </li>
                         <li class="trending">
-                            <img src="icons/pig-user.png" alt="pig-user" class="small-user-photo">
+                            <img src="icons/cat-user.jpg" alt="pig-user" class="small-user-photo">
                             <div class="info">
                                 <div class="username">@kendall</div>
                                 <div class="user-project">Life Changing App</div>
