--- a/dashboard.html
+++ b/dashboard.html
@@ -83,45 +83,63 @@
                       <div class="project-card">
                           <div class="project-title">Super Cool Project</div>
                           <div class="project-text">Donec vel libero porttitor, pharetra eros eget, volutpat sem. Ut pharetra augue tincidunt, pretium velit.</div>
-                          <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
-                          <img src="icons/view.svg" alt="views" class="views-icon">
-                          <img src="icons/share.svg" alt="share-icon">
+                          <div class="spacer"></div>
+                          <div class="icons">
+                              <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
+                              <img src="icons/view.svg" alt="views" class="views-icon">
+                              <img src="icons/share.svg" alt="share-icon">
+                          </div>
                       </div>
                       <div class="project-card">
                         <div class="project-title">Less Cool Project</div>
                         <div class="project-text">Pellentesque pulvinar justo at sem cursus, quis sagittis tellus cursus. Donec tincidunt rutrum rutrum. Nullam cursus et mi vel tincidunt. Mauris pretium mauris pretium magna.
                         </div>
-                        <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
-                        <img src="icons/view.svg" alt="views" class="views-icon">
-                        <img src="icons/share.svg" alt="share-icon">
+                        <div class="spacer"></div>
+                        <div class="icons">
+                            <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
+                            <img src="icons/view.svg" alt="views" class="views-icon">
+                            <img src="icons/share.svg" alt="share-icon">
+                        </div>
                                       </div>
                                       <div class="project-card">
                         <div class="project-title">Impossible App</div>
                         <div class="project-text">Morbi dictum vel ligula sit amet aliquam. In consectetur ultrices.</div>
-                        <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
-                        <img src="icons/view.svg" alt="views" class="views-icon">
-                        <img src="icons/share.svg" alt="share-icon">
+                        <div class="spacer"></div>
+                        <div class="icons">
+                            <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
+                            <img src="icons/view.svg" alt="views" class="views-icon">
+                            <img src="icons/share.svg" alt="share-icon">
+                        </div>
                                       </div>
                                       <div class="project-card">
                         <div class="project-title">Easy Peasy App</div>
                         <div class="project-text">In ultrices ligula neque, ac gravida nulla luctus gravida. Nunc a fermentum libero. Aenean bibendum euismod mauris, vitae ultrices velit. Donec mollis velit diam, a elementum mi.</div>
-                        <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
-                        <img src="icons/view.svg" alt="views" class="views-icon">
-                        <img src="icons/share.svg" alt="share-icon">
+                        <div class="spacer"></div>
+                        <div class="icons">
+                            <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
+                            <img src="icons/view.svg" alt="views" class="views-icon">
+                            <img src="icons/share.svg" alt="share-icon">
+                        </div>
                                       </div>
                                       <div class="project-card">
                         <div class="project-title">Ad Blocker</div>
                         <div class="project-text"> In turpis urna, viverra quis libero eleifend, auctor sagittis augue. In nec fermentum erat, eget lacinia magna. Vestibulum tincidunt malesuada.</div>
-                        <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
-                        <img src="icons/view.svg" alt="views" class="views-icon">
-                        <img src="icons/share.svg" alt="share-icon">
+                        <div class="spacer"></div>
+                        <div class="icons">
+                            <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
+                            <img src="icons/view.svg" alt="views" class="views-icon">
+                            <img src="icons/share.svg" alt="share-icon">
+                        </div>
                                       </div>
                                       <div class="project-card">
                         <div class="project-title">Money Maker</div>
                         <div class="project-text">Sed non ullamcorper turpis. Vivamus mi velit, sodales id lobortis quis, dictum a felis. Morbi dolor urna, pellentesque sit amet gravida accumsan, euismod ut dui.</div>
-                        <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
-                        <img src="icons/view.svg" alt="views" class="views-icon">
-                        <img src="icons/share.svg" alt="share-icon">
+                        <div class="spacer"></div>
+                        <div class="icons">
+                            <img src="icons/favorite.svg" alt="favorite" class="favorites-icon">
+                            <img src="icons/view.svg" alt="views" class="views-icon">
+                            <img src="icons/share.svg" alt="share-icon">
+                        </div>
                                       </div>
                   </div>
               </div>
